[tool.poetry]
name = "sg-resale-price-estimator"
version = "0.1.0"
description = "End to end project showcase MLOps implementation."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
requests = "^2.32.3"
logging = "^0.4.9.6"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
